--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,13 +9,23 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  <servlet>  
-    <servlet-name>springCountry</servlet-name>  
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>  
-    <load-on-startup>1</load-on-startup>  
-</servlet>  
-<servlet-mapping>  
-    <servlet-name>springCountry</servlet-name>  
-    <url-pattern>/</url-pattern>  
-</servlet-mapping> 
+  <servlet>
+    <servlet-name>springCountry</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>springCountry</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  <servlet>
+
+      <servlet-name>UserDetails</servlet-name>
+      <servlet-class>com.projectTest.Controller</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+      <servlet-name>UserDetails</servlet-name>
+      <url-pattern>/UserDetails</url-pattern>
+  </servlet-mapping>
 </web-app>
